--- a/style.css
+++ b/style.css
@@ -143,6 +143,49 @@ header{
 hr{
     width: 90%;
 }
+footer{
+    background-color:#FFF8F3 ;
+    display: grid;
+    grid-template-columns: repeat(2,40%);
+    justify-content: center;
+    column-gap: 60px;
+    padding: 100px;
+}
+.connet{
+   text-align: center;
+}
+.connet img{
+    margin-right: 30px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+.input{
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    padding-left: 20px;
+}
+#text{
+    width: 100% ;
+    padding-left: 20px;
+    padding-top: 20px;
+    border: none;
+    border-radius: 5px;
+}
+#submit{
+    height: 42px;
+    width: 160px;
+    font-size: 1.1rem;
+    background-color: rgba(255, 102, 0, 0.959);
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
 
 
 
@@ -195,6 +238,29 @@ hr{
     }
     .summary-resume{
         padding: 10px;
+    }
+    footer{
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0px;
+        align-items: center;
+        justify-content: center;
+    }
+    .connet,.form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+    .connet img{
+        width: 40px;
+        padding-left: 60px;
+        margin-left: 60px;
     }
 
 }
