--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ ul a{
     border-radius: 5px;
     color: white;
 }
+.btn:hover{
+    background-color: #131212;
+    color: rgba(255, 102, 0, 0.959) ;
+}
 nav h1{
     font-size: 2.7rem;
 }
@@ -71,6 +75,10 @@ header{
     border-radius: 5px;
     color: white;
 }
+.btn2:hover{
+    background-color: #131212;
+    color: rgba(255, 102, 0, 0.959) ;
+}
 .btn3{
     height: 42px;
     width: 130px;
@@ -79,6 +87,10 @@ header{
     border: none;
     border-radius: 5px;
     color: white;
+}
+.btn3:hover{
+    background-color: #131212;
+    color: rgba(255, 102, 0, 0.959) ;
 }
 .about{
     width: 60vw;
@@ -157,6 +169,11 @@ footer{
 .connet img{
     margin-right: 30px;
 }
+.connet img:hover{
+    background-color: #131212;
+    color: rgba(255, 102, 0, 0.959) ;
+    border-radius: 4px;
+}
 .form{
     display: flex;
     flex-direction: column;
@@ -186,6 +203,11 @@ footer{
     border-radius: 5px;
     color: white;
 }
+#submit:hover{
+    background-color: #131212;
+    color: rgba(255, 102, 0, 0.959) ;
+}
+
 
 
 
